# labs_c_plus_plus

./: .gitignore  CMakeLists.txt  README.md  arc.h  cache.h  ideal_cache.h  main  main.cpp  test_main.cpp
build-cache-Desktop-Debug/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  qtcsettings.cmake
build-cache-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7bae9765c8df13d23317.json  cmakeFiles-v1-0d44e1aaad9b598eda6f.json  codemodel-v2-97a8cc1896e7927b479e.json  directory-_deps.googletest-build-Debug-11b1938327028ef2e0fc.json  directory-_deps.googletest-build.googlemock-Debug-336d1c0571c362506210.json  directory-_deps.googletest-build.googletest-Debug-73bd3b847e3c90d4ae72.json  index-2023-11-05T17-09-17-0488.json  target-arc-Debug-3dac5c536ab86968328a.json  target-gmock-Debug-459fbaeeac2d5929ad81.json  target-gmock_main-Debug-04510e273f4b2e893536.json  target-gtest-Debug-efaaa6bfbe362e7bb4b0.json  target-gtest_main-Debug-df32a7b6650d96496f23.json  target-ideal-Debug-0d055662993e41f3e423.json  target-test_cache-Debug-818f413dd8c16e056490.json
build-triangles-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  CTestTestfile.cmake  cmake_install.cmake  test_triangles  triangles
build-triangles-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-24a24161922ea23df34f.json  cmakeFiles-v1-039cc1e74601ed036a58.json  cmakeFiles-v1-b155f54eb969f12d8b1f.json  codemodel-v2-4337d0f084a87d84e22a.json  codemodel-v2-f6a7aabd11b36395b6d4.json  directory-_deps.googletest-build-Debug-85bada72cb2c37db23ec.json  directory-_deps.googletest-build.googlemock-Debug-29e65f7e1d5183bc1d41.json  directory-_deps.googletest-build.googletest-Debug-8fe61a0e9ab9e0b8c59a.json  index-2023-11-03T10-58-33-0673.json  index-2023-11-05T17-36-54-0890.json  target-gmock-Debug-1ef232e4d67e66735e8b.json  target-gmock_main-Debug-8acbb83efc49e9885398.json  target-gtest-Debug-e22ca96b420e6be62063.json  target-gtest_main-Debug-d0224abf523f6065232a.json  target-test_triangles-Debug-5cbe2458f1c4d9f04e68.json
build-triangles-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-8a22357889f52ad761e0.json  target-triangles-Debug-14f798b654fc35577169.json
cache/: CMakeLists.txt  README.md  arc.cpp  arc.h  ideal.cpp  main.cpp  run_tests  test_main.cpp  utils.hpp
triangles/: CMakeLists.txt  README.md  bld  build_tr  linal.hpp  main.cpp  run_tests  test_triangles.cpp  tests  triangles  triangles.hpp
triangles/include/: linal.hpp
triangles/src/: CMakeLists.txt  main.cpp
triangles/tests/: CMakeLists.txt  point_tests.cpp  test_triangles.cpp  unit_tests.cpp
